more HATEOAS features